<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.sample.nttdocomo.android.linkingpairingdemo.pairing.LedDemoActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="20sp"
        android:text="@string/led_text" />

    <!-- 点灯パターンを指定できるようにする？ -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/led_red_demo"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:textColor="@android:color/white"
            android:background="@color/led_red"
            android:textSize="20sp"
            android:text="@string/led_red"/>

        <Button
            android:id="@+id/led_green_demo"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:textColor="@android:color/white"
            android:background="@color/led_green"
            android:textSize="20sp"
            android:text="@string/led_green"/>

        <Button
            android:id="@+id/led_orange_demo"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:textColor="@android:color/white"
            android:background="@color/led_orange"
            android:textSize="20sp"
            android:text="@string/led_orange"/>

    </LinearLayout>
</LinearLayout>
